WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246706
nullptr crash in WebCore::IDBTransaction::dispatchEvent
https://bugs.webkit.org/show_bug.cgi?id=246706
Summary
nullptr crash in WebCore::IDBTransaction::dispatchEvent
Miguel Salinas
Reported
2022-10-18 12:58:29 PDT
WebCore::IDBTransaction::dispatchEvent dereferences m_openDBRequest without checking if it is null
Attachments
Add attachment
proposed patch, testcase, etc.
Miguel Salinas
Comment 1
2022-10-18 12:59:16 PDT
rdar://94637046
Miguel Salinas
Comment 2
2022-10-21 13:41:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5645
EWS
Comment 3
2022-10-28 12:55:45 PDT
Committed
256112@main
(4a1a50028375): <
https://commits.webkit.org/256112@main
> Reviewed commits have been landed. Closing PR #5645 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug