nullptr crash in WebCore::IDBTransaction::dispatchEvent https://bugs.webkit.org/show_bug.cgi?id=246706 rdar://94637046

Reviewed by NOBODY (OOPS!).

We should check if m_openDBRequest is null in
IDBTransaction::dispatchEvent. The repro is flaky but does reproduce for
me ~1/3 of the time. I tried to reduce the test case but it either
stopped reproducing or reproduced significantly less frequently.

* LayoutTests/storage/indexeddb/crash-on-getdatabases-expected.txt: Added.
* LayoutTests/storage/indexeddb/crash-on-getdatabases.html: Added.
* LayoutTests/storage/indexeddb/resources/crash-on-getdatabases.js: Added.
(async testDoesNotCrash):
* Source/WebCore/Modules/indexeddb/IDBTransaction.cpp:
(WebCore::IDBTransaction::dispatchEvent):